# giteagle

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/giteagle/: config.py
src/giteagle/cli/: main.py  prs_renderer.py  standup_renderer.py
src/giteagle/core/: aggregator.py  models.py
src/giteagle/integrations/: base.py  github.py
tests/unit/: test_aggregator.py  test_log_renderer.py  test_prs_renderer.py  test_standup_renderer.py  test_stats_renderer.py
